LeetCode 327. Count of Range Sum
mergeSort Partially

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,31 @@ LeetCode/LeetCode/Debug/mySource.obj
 LeetCode/LeetCode/Debug/stdafx.obj
 LeetCode/LeetCode/Debug/vc140.idb
 LeetCode/LeetCode/Debug/vc140.pdb
+LeetCode/C++_Test/C++_Test.VC.db
+LeetCode/C++_Test/C++_Test.VC.VC.opendb
+LeetCode/C++_Test/C++_Test/C++_Test.vcxproj
+LeetCode/C++_Test/C++_Test/C++_Test.vcxproj.filters
+LeetCode/C++_Test/C++_Test/ReadMe.txt
+LeetCode/C++_Test/C++_Test/stdafx.cpp
+LeetCode/C++_Test/C++_Test/stdafx.h
+LeetCode/C++_Test/C++_Test/targetver.h
+LeetCode/C++_Test/.vs/C++_Test/v14/.suo
+LeetCode/C++_Test/C++_Test.sln
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.log
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.obj
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.pch
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/C++_Test.lastbuildstate
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/CL.command.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/CL.read.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/CL.write.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/link.command.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/link.read.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/C++_Test.tlog/link.write.1.tlog
+LeetCode/C++_Test/C++_Test/Debug/mySource.obj
+LeetCode/C++_Test/C++_Test/Debug/stdafx.obj
+LeetCode/C++_Test/C++_Test/Debug/vc140.idb
+LeetCode/C++_Test/C++_Test/Debug/vc140.pdb
+LeetCode/C++_Test/Debug/C++_Test.exe
+LeetCode/C++_Test/Debug/C++_Test.ilk
+LeetCode/C++_Test/Debug/C++_Test.pdb
+LeetCode/C++_Test/ipch/C++_TEST-3b045954/C++_TEST-4ee8cf64.ipch
