LeetCode 336. Palindrome Pairs
Change Logic To avoid calling isPalindrome(),but improvement isn't visable

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ LeetCode/C++_Test/Debug/C++_Test.exe
 LeetCode/C++_Test/Debug/C++_Test.ilk
 LeetCode/C++_Test/Debug/C++_Test.pdb
 LeetCode/C++_Test/ipch/C++_TEST-3b045954/C++_TEST-4ee8cf64.ipch
+*.zip
