LeetCode 407. Trapping Rain Water II ,FrameWork

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ LeetCode_V2/ConsoleApplication1/.vs/ConsoleApplication1/v14/.suo
 *.tlog
 *.exe
 *.ilk
+LeetCode_V2/ConsoleApplication1/.vs/ConsoleApplication1/v15/ipch/8f3b750e4e7316f4.ipch
+LeetCode_V2/ConsoleApplication1/.vs/ConsoleApplication1/v15/ipch/b274624a53b29ff9.ipch
+LeetCode_V2/ConsoleApplication1/.vs/ConsoleApplication1/v15/Browse.VC.db
+LeetCode_V2/ConsoleApplication1/.vs/ConsoleApplication1/v15/Browse.VC.opendb
